# django_blog

./: Dockerfile  docker-compose.yml  pyproject.toml
django_blog/blog/: urls.py  views.py
django_blog/config/: settings.py
